# manch-care

./: README.md
opencv-test/: CMakeLists.txt
opencv-test/headers/: BackgroundImage.h  common.h  image.h
opencv-test/sources/: opencv-test.cpp
